fix(hero): Fixed invisible border on Chrome in Hero

--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -34,6 +34,11 @@
     margin-top: 24px;
 }
 
+.Button {
+    color: white;
+    border: white solid 1px;
+}
+
 
 .indexCtasGitHubButtonWrapper {
     display: flex;
